# pycolumnize

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .python-version  .travis.yml  ChangeLog  LICENSE  MANIFEST.in  Makefile  NEWS  NEWS.md  README.md  README.rst  README.txt  THANKS  VERSION.py  __init__.py  __pkginfo__.py  appveyor.yml  columnize.py  example.py  example2.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  test_columnize.py  tox.ini
.github/: FUNDING.yml
.github/workflows/: macos.yml  osx.yml  ubuntu.yml  windows.yml
admin-tools/: check-3.0-3.2-versions.sh  check-3.0-3.5-versions  check-3.0-3.5-versions.sh  check-3.1-3.5-versions  check-3.3-3.5-versions.sh  check-3.6-3.10-versions.sh  check-versions.sh  checkout_common.sh  how-to-make-a-release.md  make-dist-2.4-2.7.sh  make-dist-3.0-3.2.sh  make-dist-3.0-3.5.sh  make-dist-3.3-3.5.sh  make-dist-3.6-3.10.sh  make-dist-newest.sh  make-dist.sh  merge-for-2.4.sh  merge-for-3.0.sh  merge-for-3.3.sh  merge-for-3.6.sh  pyenv-3.0-3.5-versions  pyenv-3.1-3.5-versions  pyenv-3.3-3.5-versions  pyenv-3.6-3.10-versions  pyenv-newest-versions  setup-master.sh  setup-python-3.0.sh  setup-python-3.1.sh  setup-python-3.3.sh  setup-python-3.6.sh
columnize/: __init__.py  __main__.py  version.py
test/: test-basic.py  test_columnize.py
