[build-system]
requires = [
    "setuptools>=70.0.0",
]
[project]
authors = [
   {name = "Rocky Bernstein"},
   {email = "rocky@gnu.org"}
]
name = "columnize"
description = "Format a simple (i.e. not nested) list into aligned columns."
dependencies = []
readme = "README.rst"
license = "MIT"
maintainers = [
    {name = "Rocky Bernstein"},
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 2.4",
    "Programming Language :: Python :: 2.5",
    "Programming Language :: Python :: 2.6",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3.1",
    "Programming Language :: Python :: 3.2",
    "Programming Language :: Python :: 3.3",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/rocky/pycolumnize"

[tool.setuptools.dynamic]
version = {attr = "columnize.version.__version__"}

[tool.setuptools.packages.find]
include = ["columnize*"]  # Include all subpackages
